Changes for 1.1.6:

 - fixed trigger expressions with ':' (Eugene)
 - improved 'perf_counter[*]' for WinXX (Eugene)
 - fixed 'service_state[*]' for WinXX (Eugene)
 - fixed 'Hystory of events' and 'Server info' screen componets (Eugene)
 - fixed stderr/stdout redirection (Eugene)
 - fixed macros substitution for messages (Eugene)
 - increased message size for alerts (Eugene)
 - fixed permission system (Eugene)
 - fixed SQLs for PostgreSQL (Eugene)
 - fix for adding trigger expressions having sign '-' (Alexei)
 - fix for adding hosts names having character '-' (Alexei)

Changes for 1.1.5:

 - agent can be started as root, new parameter AllowRoot (Alexei)
 - fixed error loging for active chechs of WinXX (Eugene)
 - fixed status changing for active checks (Eugene)
 - new macros {PROFILE.DEVICETYPE}, {PROFILE.NAME}, {PROFILE.OS},
 {PROFILE.SERIALNO}, {PROFILE.TAG}, {PROFILE.MACADDRESS},
 {PROFILE.HARDWARE}, {PROFILE.SOFTWARE}, {PROFILE.CONTACT},
 {PROFILE.LOCATION}, {PROFILE.NOTES} (Alexei)
 - fixed function max(#N) (Alexei)
 - do not show connector as ON if trigger disabled (Alexei)
 - fixed calculation of aggregate items under Oracle (Alexei)
 - added support of macro ITEM.NAME (Alexei)
 - fixed 'eventlog[]' for WinXX (Eugene)
 - added possibility of hostname using for 'Server' option of WinXX agent
     configuration file (Eugene)
 - fixed some assertions (Eugene)
 - fixed missing last symbol in vfs.file.regexp (Alexei)
 - fixed 'system.cpu.util[*]' for SunOS (Eugene)
 - added availability to using '$' sign for hosts and item keys (Eugene)
 - fixed 'perf_counter[*]' for WinXX (Eugene)
 - added parameter ListenIP to WinXX ZABBIX agent (Eugene)
 - increased message size for alerts (Eugene)
 - fixed permission system (Eugene)
 - fixed conflict with cookies of other products (Eugene)
 - added sorting by host in trigger status screen (Eugene)
 - added login/logout information into auditlog (Eugene)
 - fixed values viwing on overview screen (Eugene)